@@ -1,4 +1,4 @@
-@set UPDATED 12 November 2001
-@set UPDATED-MONTH November 2001
+@set UPDATED 10 December 2001
+@set UPDATED-MONTH December 2001
 @set EDITION 0.90
 @set VERSION 0.90
